--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h2>A Plan for Every Dog's Needs</h2>
         <p>Simple and affordable price plans for you and your dog.</p>
       </div>
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center mx-lg-0 mx-md-1 mx-2">
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm border-secondary">
             <div class="card-header py-3 border-secondary">
